--- a/styles/light.css
+++ b/styles/light.css
@@ -11,14 +11,14 @@
   */
   background-image: url(../images/cover-image-light.png);
   background-size: cover;
-    background-repeat: no-repeat;
-    block-size: 100vh;
-    min-block-size: 668px;
+  background-repeat: no-repeat;
+  block-size: 100vh;
+  min-block-size: 668px;
   background-position: center;
 }
 
 :root .theme_light {
- --accent-color: #ff0070;
+  --accent-color: #ff0070;
   --text-color: #353430;
   --title-color: #ffc2e6;
   --title-border-color: #000000;
@@ -43,11 +43,11 @@
 
   .page {
     background-image: url(../images/cover-image-light.png);
-      background-size: cover;
-        background-repeat: no-repeat;
-        block-size: 100vh;
-        min-block-size: 668px;
-      background-position: center;   
+    background-size: cover;
+    background-repeat: no-repeat;
+    block-size: 100vh;
+    min-block-size: 668px;
+    background-position: center;
   }
 
   .decor_rec {
@@ -59,15 +59,12 @@
   display: none;
 }
 
-
-
 @media (width <= 375px) {
   .theme_light .header {
     position: relative;
     display: grid;
     grid-template-rows: 1fr min-content 1fr;
     justify-self: center;
-  
   }
 
   .theme_light .decorated-zone {
@@ -76,7 +73,6 @@
     background-repeat: no-repeat;
     block-size: 100vh;
     max-block-size: 668px;
-    
   }
 
   .theme_light .header__text {
@@ -86,8 +82,6 @@
     align-self: center;
     word-wrap: break-word;
     text-align: left;
-    
-
   }
 
   .theme_light .header__theme-menu-list {
@@ -195,11 +189,10 @@
     .content_bottom-container
     .card_block:first-of-type
     .card_title:first-of-type {
-      margin-block-start: 20px;
+    margin-block-start: 20px;
     margin-block-end: 10px;
     font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
     font-weight: 700;
-   
   }
 
   .theme_light .content_bottom-container .card_block .card_title {
@@ -233,23 +226,19 @@
   .theme_light .footer {
     block-size: 100vh;
     max-block-size: 668px;
-    
   }
 }
 
-@media (376px <= width <= 768px) {
-  
+@media (375px < width <= 768px) {
   .theme_light .header {
     position: relative;
     display: grid;
     grid-template-rows: 1fr min-content 1fr;
     justify-self: center;
     min-block-size: 1024px;
-    
   }
 
   .theme_light .decorated-zone {
-
   }
 
   .theme_light .header__text {
@@ -259,7 +248,6 @@
     align-self: center;
     margin-inline: 20px;
     justify-self: right;
-    
   }
 
   .theme_light .header__theme-menu-list {
@@ -326,8 +314,6 @@
 
   .theme_light .content_bottom-heading {
     padding-inline-end: 20px;
-    
-  
   }
 
   .theme_light
@@ -394,25 +380,20 @@
   }
 }
 
-@media (769px <= width < 1025px) {
-
-  
+@media (768px < width <= 1024px) {
   .theme_light .decorated-zone {
-
   }
-  
+
   .theme_light .header {
     min-block-size: 768px;
-   
   }
 
   .theme_light .header__text {
-  margin-inline: 20px;
-  width: max(47%, 491px);
-  justify-self: right;
-  align-self: center;
-  padding-block-end: 16px;
-  
+    margin-inline: 20px;
+    width: max(47%, 491px);
+    justify-self: right;
+    align-self: center;
+    padding-block-end: 16px;
   }
 
   .theme_light .header__theme-menu-list {
@@ -464,14 +445,13 @@
     .card_title:first-of-type {
     margin-block-end: 10px;
     padding-block-start: 10px;
-    
-   
   }
 
   .theme_light .content_bottom-container .card_title:first-of-type {
     margin-block-end: 8px;
   }
-  .theme_light .content_bottom-container .card_title{
+  
+  .theme_light .content_bottom-container .card_title {
     margin-block-end: 20px;
   }
 }
