--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,7 @@
 /* Глобальные стили для проекта, их можно дополнять и менять по желанию */
-
+/*{
+  outline: 1px solid red;
+}*/
 *,
 *::before,
 *::after {
@@ -10,13 +12,17 @@ body {
   min-inline-size: 375px;
   max-inline-size: 1440px;
   margin: 0 auto;
-  /*overflow-y: hidden;*/
-
-}
-
-body::-webkit-scrollbar {
+  
+  /*
+  overflow-y: hidden;
+  body::-webkit-scrollbar {
   width: 0;
 }
+
+  */
+
+}
+
 
 h1,
 h2,
