--- a/styles/dark.css
+++ b/styles/dark.css
@@ -60,6 +60,35 @@
   display: inherit;
 }
 
+.theme_dark .header__theme-menu-button_active:hover {
+  outline: 1px solid rgb(241 178 206 / 0.5);
+}
+
+.theme_dark .header__theme-menu-button_active:focus {
+  outline: none;
+}
+
+.theme_dark .header__theme-menu-button_active:focus-visible {
+  outline: 1px solid rgb(241 178 206 / 0.5);
+}
+
+.theme_dark .card_link {
+  text-decoration: none;
+  text-shadow: 2px 1px 0 var(--text-color);
+}
+
+.theme_dark .card_link:hover {
+  border-bottom: 1px solid var(--main-text-color);
+}
+
+.theme_dark .card_link:focus {
+  outline: none;
+}
+
+.theme_dark .card_link:focus-visible {
+  outline: 1px solid var(--main-text-color);
+}
+
 @media (width <= 375px) {
   .theme_dark .header {
     position: relative;
@@ -116,18 +145,6 @@
   .theme_dark .decor_rec::before {
     top: 7%;
     left: 92.5%;
-  }
-
-  .theme_dark .header__theme-menu-button_active:hover {
-    border: 1px solid rgb(255 0 112 / 0.5);
-  }
-
-  .theme_dark .header__theme-menu-button_active:focus {
-    border: none;
-  }
-
-  .theme_dark .header__theme-menu-button_active:focus-visible {
-    border-bottom: 1px solid rgb(255 0 112 / 0.5);
   }
 
   .theme_dark .content_top-container {
@@ -192,7 +209,7 @@
     margin-block-start: 20px;
     margin-block-end: 10px;
     font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
-    font-weight: 700;
+    font-weight: 400;
   }
 
   .theme_dark .content_bottom-container .card_block .card_title {
@@ -276,29 +293,17 @@
 
   .theme_dark .decor_corner::after {
     top: 1.5%;
-    left: 91%;
+    left: 93%;
   }
 
   .theme_dark .decor_rec::after {
     top: 4%;
-    left: 81%;
+    left: 86%;
   }
 
   .theme_dark .decor_rec::before {
     top: 7%;
-    left: 92.5%;
-  }
-
-  .theme_dark .header__theme-menu-button_active:hover {
-    outline: 1px solid rgb(53 52 48 / 0.5);
-  }
-
-  .theme_dark .header__theme-menu-button_active:focus {
-    outline: none;
-  }
-
-  .theme_dark .header__theme-menu-button_active:focus-visible {
-    outline: 1px solid rgb(53 52 48 / 0.5);
+    left: 94.5%;
   }
 
   .theme_dark .content_top-container {
@@ -363,7 +368,7 @@
     margin-block-start: 20px;
     margin-block-end: 10px;
     font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
-    font-weight: 700;
+    font-weight: 400;
   }
 
   .theme_dark .content_bottom-container .card_block .card_title {
@@ -401,15 +406,12 @@
 }
 
 @media (600px < width <= 768px) {
-  .header {
+  .theme_dark .header {
     position: relative;
     display: grid;
     grid-template-rows: 1fr min-content 1fr;
     justify-self: center;
     min-block-size: 1024px;
-  }
-
-  .theme_dark .decorated-zone {
   }
 
   .theme_dark .header__text {
@@ -431,7 +433,7 @@
   }
 
   .theme_dark .decor_corner::before {
-    top: 96%;
+    top: 95.5%;
   }
 
   .theme_dark .decor_corner::after {
@@ -446,18 +448,6 @@
     left: 94.5%;
   }
 
-  .theme_dark .header__theme-menu-button_active:hover {
-    outline: 1px solid rgb(53 52 48 / 0.5);
-  }
-
-  .theme_dark .header__theme-menu-button_active:focus {
-    outline: none;
-  }
-
-  .theme_dark .header__theme-menu-button_active:focus-visible {
-    border-bottom: 1px solid rgb(53 52 48 / 0.5);
-  }
-
   .theme_dark .heading {
     padding-right: 30px;
   }
@@ -467,7 +457,7 @@
   }
 
   .theme_dark .content_top-container .card_block:first-of-type {
-    margin-block-end: 20px;
+    margin-block-end: 11px;
   }
 
   .theme_dark .content_middle {
@@ -494,7 +484,7 @@
     margin-block-end: 10px;
     padding-block-start: 10px;
     font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
-    font-weight: 700;
+    font-weight: 400;
   }
 
   .theme_dark .content_bottom-container .card_block .card_title {
@@ -507,7 +497,7 @@
   }
 
   .theme_dark .content_bottom-container .card_block:not(:last-of-type) {
-    margin-block-end: 21px;
+    margin-block-end: 11px;
   }
 
   .theme_dark .content_bottom-container {
@@ -552,9 +542,6 @@
 }
 
 @media (768px < width <= 1024px) {
-  .theme_dark .decorated-zone {
-  }
-
   .theme_dark .header {
     min-block-size: 768px;
   }
@@ -577,11 +564,11 @@
   }
 
   .theme_dark .decor_corner::before {
-    top: 94%;
+    top: 95%;
   }
 
   .theme_dark .decor_corner::after {
-    left: 96%;
+    left: 95.5%;
   }
 
   .theme_dark .decor_rec::after {
@@ -589,28 +576,16 @@
   }
 
   .theme_dark .decor_rec::before {
-    left: 96.5%;
+    left: 96%;
   }
 
-  .theme_dark .header__theme-menu-button_active:hover {
-    outline: 1px solid rgb(53 52 48 / 0.5);
-  }
-
-  .theme_dark .header__theme-menu-button_active:focus {
-    outline: none;
-  }
-
-  .theme_dark .header__theme-menu-button_active:focus-visible {
-    border-bottom: 1px solid rgb(53 52 48 / 0.5);
-  }
   .theme_dark .content_top {
-    margin-block-end: 82px;
+    margin-block-end: 56px;
   }
 
   .theme_dark .content_middle {
-    margin-block-end: 81px;
+    margin-block-end: 57px;
   }
-
   .theme_dark
     .content_bottom-container
     .card_block:first-of-type
@@ -620,9 +595,8 @@
   }
 
   .theme_dark .content_bottom-container .card_title:first-of-type {
-    margin-block-end: 8px;
+    margin-block-end: 9px;
   }
-
   .theme_dark .content_bottom-container .card_title {
     margin-block-end: 20px;
   }
