--- a/styles/light.css
+++ b/styles/light.css
@@ -9,648 +9,41 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-  background-image: url(../images/cover-image-light.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  block-size: 100vh;
-  min-block-size: 668px;
-  background-position: center;
+  background-image: var(--bg-image-light);
 }
 
 :root .theme_light {
-  --accent-color: #ff0070;
   --text-color: #353430;
   --title-color: #ffc2e6;
-  --title-border-color: #000000;
   --text-decor: #ff8dcb;
   --title-text-color: var(--text-color);
   --heading-color: var(--text-color);
-  --main-text-color: var(--text-color); /*---*/
+  --main-text-color: var(--text-color);
+  --btn-status-color: rgb(53 52 48 / 0.5);
   background-color: #ffeef6;
   background-attachment: fixed;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    /* Дублируем переменные светлой темы */
-    --accent-color: #ff0070;
-    --text-color: #353430;
-    --title-color: #ffc2e6;
-    --title-border-color: #000000;
-    --text-decor: #ff8dcb;
-    --title-text-color: var(--text-color: );
-    --heading-color: var(--text-color);
-    --main-text-color: var(--text-color); /*---*/
-  }
-
-  .page {
-    background-image: url(../images/cover-image-light.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    block-size: 100vh;
-    min-block-size: 668px;
-    background-position: center;
-  }
-
-  .decor_rec {
-    display: none;
-  }
 }
 
 .theme_light .decor_rec {
   display: none;
 }
 
-.theme_light .header__theme-menu-button_active:hover {
-  outline: 1px solid rgb(53 52 48 / 0.4);
-}
-
-.theme_light .header__theme-menu-button_active:focus {
-  outline: none;
-}
-
-.theme_light .header__theme-menu-button_active:focus-visible {
-  outline: 1px solid rgb(53 52 48 / 0.5);
-}
-
-.card_link {
-  text-decoration: none;
-  text-shadow: 2px 1px 0 var(--text-decor);
-}
-
-.card_link:hover {
-  border-bottom: 1px solid var(--text-color);
-}
-
-.card_link:focus {
-  outline: none;
-}
-
-.card_link:focus-visible {
-  outline: 1px solid var(--text-color);
-}
-
-@media (width <= 375px) {
-  .theme_light .header {
-    position: relative;
-    display: grid;
-    grid-template-rows: 1fr min-content 1fr;
-    justify-self: center;
-  }
-
-  .theme_light .decorated-zone {
-    width: 100%;
-    background-size: cover;
-    background-repeat: no-repeat;
-    block-size: 100vh;
-    max-block-size: 668px;
-  }
-
-  .theme_light .header__text {
-    margin-inline: 10px;
-    margin-block-start: 17px;
-    margin-block-end: 30px;
-    align-self: center;
-    word-wrap: break-word;
-    text-align: left;
-  }
-
-  .theme_light .header__theme-menu-list {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    margin-block-start: 75px;
-    margin-inline-end: 8px;
-    gap: 13px;
-  }
-
-  .theme_light .header__title {
-    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-    margin-inline-start: 10px;
-  }
-
-  .theme_light .decor_corner::before {
-    top: 95%;
-    left: 10px;
-  }
-
-  .theme_light .decor_corner::after {
-    top: 1.5%;
-    left: 91%;
-  }
-
-  .theme_light .decor_rec::after {
-    top: 4%;
-    left: 81%;
-  }
-
-  .theme_light .decor_rec::before {
-    top: 7%;
-    left: 92.5%;
-  }
-
-  .theme_light .content_top-container {
-    display: block;
-  }
-
-  .theme_light .content_top {
-    margin-inline: 10px;
-    margin-block-start: 40px;
-    margin-block-end: 50px;
-  }
-
-  .theme_light .heading {
-    margin-block-end: 20px;
-  }
-
-  .theme_light .content_top-container .card_block:first-of-type {
-    margin-block-end: 22px;
-  }
-
-  .theme_light .content_middle-container {
-    display: block;
-  }
-
-  .theme_light .content_middle {
-    margin-inline: 10px;
-    margin-block-end: 50px;
-  }
-
-  .theme_light .content_middle-heading {
-    margin-block-end: 20px;
-    margin-inline-end: 0px;
-  }
-
-  .theme_light .content_middle-container .card_block:nth-last-child(2) {
-    margin-inline: 0px;
-    margin-block: 0px;
-  }
-
-  .theme_light .content_middle-container .card_block .paragraph {
-    margin-block-end: 21px;
-  }
-
-  .theme_light .content_bottom-container {
-    display: block;
-  }
-
-  .theme_light .content_bottom {
-    margin-inline: 10px;
-    margin-block-end: 47px;
-  }
-
-  .theme_light .content_bottom-heading {
-    margin-block-end: 20px;
-    padding-inline-end: 0px;
-  }
-
-  .theme_light
-    .content_bottom-container
-    .card_block:first-of-type
-    .card_title:first-of-type {
-    margin-block-start: 20px;
-    margin-block-end: 10px;
-    font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
-    font-weight: 400;
-  }
-
-  .theme_light .content_bottom-container .card_block .card_title {
-    font-weight: 400;
-    font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
-  }
-
-  .theme_light .content_bottom-container .card_block:not(:last-of-type) {
-    margin-block-end: 21px;
-  }
-
-  .theme_light .content_gallery {
-    margin-inline: 10px;
-    margin-block-end: 31px;
-  }
-  .theme_light .content_gallery-container {
-    display: block;
-    margin-block-start: 10px;
-  }
-
-  .theme_light .content_gallery-heading {
-    margin-block-end: 10px;
-  }
-
-  .theme_light .content_picture {
-    width: min(100%, 355px);
-    height: 100%;
-    margin-block-end: 6px;
-  }
-
-  .theme_light .footer {
-    block-size: 100vh;
-    max-block-size: 668px;
-  }
-}
-
-@media (375px < width <= 600px) {
-  .theme_light .header {
-    position: relative;
-    display: grid;
-    grid-template-rows: 1fr min-content 1fr;
-    justify-self: center;
-    width: max(47%, 355px);
-  }
-
-  .theme_light .decorated-zone {
-    width: 100%;
-    background-size: cover;
-    background-repeat: no-repeat;
-    block-size: 100vh;
-    max-block-size: 668px;
-  }
-
-  .theme_light .header__text {
-    margin-inline: 10px;
-    margin-block-start: 17px;
-    margin-block-end: 30px;
-    align-self: center;
-    word-wrap: break-word;
-  }
-
-  .theme_light .header__theme-menu-list {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    margin-block-start: 75px;
-    margin-inline-end: 8px;
-    gap: 13px;
-  }
-
-  .theme_light .header__title {
-    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-    margin-inline-start: 10px;
-  }
-
-  .theme_light .decor_corner::before {
-    top: 95%;
-    left: 10px;
-  }
-
-  .theme_light .decor_corner::after {
-    top: 1.5%;
-    left: 93%;
-  }
-
-  .theme_light .decor_rec::after {
-    top: 4%;
-    left: 81%;
-  }
-
-  .theme_light .decor_rec::before {
-    top: 7%;
-    left: 92.5%;
-  }
-
-  .theme_light .content_top-container {
-    display: block;
-  }
-
-  .theme_light .content_top {
-    margin-inline: 10px;
-    margin-block-start: 40px;
-    margin-block-end: 50px;
-  }
-
-  .theme_light .heading {
-    margin-block-end: 20px;
-  }
-
-  .theme_light .content_top-container .card_block:first-of-type {
-    margin-block-end: 22px;
-  }
-
-  .theme_light .content_middle-container {
-    display: block;
-  }
-
-  .theme_light .content_middle {
-    margin-inline: 10px;
-    margin-block-end: 50px;
-  }
-
-  .theme_light .content_middle-heading {
-    margin-block-end: 20px;
-    margin-inline-end: 0px;
-  }
-
-  .theme_light .content_middle-container .card_block:nth-last-child(2) {
-    margin-inline: 0px;
-    margin-block: 0px;
-  }
-
-  .theme_light .content_middle-container .card_block .paragraph {
-    margin-block-end: 21px;
-  }
-
-  .theme_light .content_bottom-container {
-    display: block;
-  }
-
-  .theme_light .content_bottom {
-    margin-inline: 10px;
-    margin-block-end: 47px;
-  }
-
-  .theme_light .content_bottom-heading {
-    margin-block-end: 20px;
-    padding-inline-end: 0px;
-  }
-
-  .theme_light
-    .content_bottom-container
-    .card_block:first-of-type
-    .card_title:first-of-type {
-    margin-block-start: 20px;
-    margin-block-end: 10px;
-    font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
-    font-weight: 400;
-  }
-
-  .theme_light .content_bottom-container .card_block .card_title {
-    font-weight: 400;
-    font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
-  }
-
-  .theme_light .content_bottom-container .card_block:not(:last-of-type) {
-    margin-block-end: 21px;
-  }
-
-  .theme_light .content_gallery {
-    margin-inline: 10px;
-    margin-block-end: 31px;
-  }
-  .theme_light .content_gallery-container {
-    display: block;
-    margin-block-start: 10px;
-  }
-
-  .theme_light .content_gallery-heading {
-    margin-block-end: 10px;
-  }
-
-  .theme_light .content_picture {
-    width: min(100%, 600px);
-    height: 100%;
-    margin-block-end: 6px;
-  }
-
-  .theme_light .footer {
-    block-size: 100vh;
-    max-block-size: 668px;
-  }
-}
-
-@media (600px < width <= 768px) {
-  .theme_light .header {
-    position: relative;
-    display: grid;
-    grid-template-rows: 1fr min-content 1fr;
-    justify-self: center;
-    min-block-size: 1024px;
-  }
-
-  .theme_light .header__text {
-    margin-block-start: 7px;
-    width: max(47%, 364px);
-    margin-block-end: 30px;
-    align-self: center;
-    margin-inline: 20px;
-    justify-self: right;
-  }
-
-  .theme_light .header__theme-menu-list {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    margin-block-start: 196px;
-    margin-inline-end: 20px;
-    gap: 10px;
-  }
-
-  .theme_light .decor_corner::before {
-    top: 95.5%;
-  }
-
-  .theme_light .decor_corner::after {
-    left: 94%;
-  }
-
-  .theme_light .decor_rec::after {
-    left: 89%;
-  }
-
-  .theme_light .decor_rec::before {
-    left: 94.5%;
-  }
-
-  .theme_light .heading {
-    padding-right: 30px;
-  }
-
-  .theme_light .content_top-container {
-    grid-template-columns: calc(35%) calc(65%);
-  }
-
-  .theme_light .content_top-container .card_block:first-of-type {
-    margin-block-end: 11px;
-  }
-
-  .theme_light .content_middle {
-    margin-block-end: 81px;
-  }
-
-  .theme_light .content_middle-container {
-    display: block;
-  }
-
-  .theme_light .content_middle-container .card_block:nth-last-child(2) {
-    margin-inline: 0px;
-    margin-block: 23px;
-  }
-
-  .theme_light .content_bottom-heading {
-    padding-inline-end: 20px;
-  }
-
-  .theme_light
-    .content_bottom-container
-    .card_block:first-of-type
-    .card_title:first-of-type {
-    margin-block-end: 10px;
-    padding-block-start: 10px;
-    font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
-    font-weight: 400;
-  }
-
-  .theme_light .content_bottom-container .card_block .card_title {
-    font-weight: 400;
-    font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
-  }
-
-  .theme_light .card_title {
-    margin-block-end: 9px;
-  }
-
-  .theme_light .content_bottom-container .card_block:not(:last-of-type) {
-    margin-block-end: 11px;
-  }
-
-  .theme_light .content_bottom-container {
-    grid-template-columns: calc(35%) calc(65%);
-  }
-
-  .theme_light .content_gallery-container {
-    display: grid;
-    grid-template-columns: 31% 32% 31%;
-    grid-template-rows: 25% 29% 41%;
-    height: 100%;
-  }
-
-  .theme_light .sunset {
-    grid-area: sunset;
-    width: min(100%, 479px);
-  }
-
-  .theme_light .ice-cream {
-    grid-area: ice-cream;
-    width: min(100%, 229px);
-  }
-
-  .theme_light .tape {
-    grid-area: tape;
-    width: min(100%, 229px);
-  }
-
-  .theme_light .books {
-    grid-area: books;
-    width: min(100%, 230px);
-  }
-
-  .theme_light .street {
-    grid-area: street;
-    width: min(100%, 479px);
-  }
-
-  .theme_light .footer {
-    height: 1024px;
-  }
-}
-
-@media (768px < width <= 1024px) {
-  .theme_light .header {
-    min-block-size: 768px;
-  }
-
-  .theme_light .header__text {
-    margin-inline: 20px;
-    width: max(47%, 491px);
-    justify-self: right;
-    align-self: center;
-    padding-block-end: 16px;
-  }
-
-  .theme_light .header__theme-menu-list {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: flex-start;
-    margin-block-start: 20px;
-    gap: 6px;
-  }
-
-  .theme_light .decor_corner::before {
-    top: 95%;
-  }
-
-  .theme_light .decor_corner::after {
-    left: 95.5%;
-  }
-
-  .theme_light .decor_rec::after {
-    left: 92%;
-  }
-
-  .theme_light .decor_rec::before {
-    left: 96.5%;
-  }
-
-  .theme_light .content_top {
-    margin-block-end: 56px;
-  }
-
-  .theme_light .content_middle {
-    margin-block-end: 57px;
-  }
-  .theme_light
-    .content_bottom-container
-    .card_block:first-of-type
-    .card_title:first-of-type {
-    margin-block-end: 10px;
-    padding-block-start: 10px;
-  }
-
-  .theme_light .content_bottom-container .card_title:first-of-type {
-    margin-block-end: 9px;
-  }
-  .theme_light .content_bottom-container .card_title {
-    margin-block-end: 20px;
-  }
-}
-
-@media (1024px < width <= 1440px) {
-  .theme_light .header {
-    block-size: 100vh;
-    min-block-size: 900px;
-  }
-
-  .theme_light .header__text {
-    margin-inline: 20px;
-    width: max(47%, 491px);
-    justify-self: right;
-    align-self: center;
-    padding-block-end: 16px;
-  }
-
-  .theme_light .content_gallery-container {
-    display: grid;
-    grid-template-columns: 31% 32% 31%;
-    grid-template-rows: 25% 29% 41%;
-    height: 100%;
-  }
-
-  .theme_light .sunset {
-    grid-area: sunset;
-    width: min(100%, 900px);
-  }
-
-  .theme_light .ice-cream {
-    grid-area: ice-cream;
-    width: min(100%, 433px);
-  }
-
-  .theme_light .tape {
-    grid-area: tape;
-    width: min(100%, 433px);
-  }
-
-  .theme_light .books {
-    grid-area: books;
-    width: min(100%, 445px);
-  }
-
-  .theme_light .street {
-    grid-area: street;
-    width: min(100%, 900px);
-  }
-
-  .theme_light .footer {
-    block-size: 100vh;
-    min-block-size: 900px;
+@media (prefers-color-scheme: light) {
+  :root {
+    --text-color: #353430;
+    --title-color: #ffc2e6;
+    --text-decor: #ff8dcb;
+    --title-text-color: var(--text-color);
+    --heading-color: var(--text-color);
+    --main-text-color: var(--text-color);
+    --btn-status-color: rgb(53 52 48 / 0.5);
+  }
+
+  .page {
+    background-image: var(--bg-image-light);
+  }
+
+  .decor_rec {
+    display: none;
   }
 }
