--- a/styles/dark.css
+++ b/styles/dark.css
@@ -19,7 +19,7 @@
   --title-text-color: #000028;
   --heading-color: var(--accent-color);
   --main-text-color: #f1b2ce;
-  --btn-status-color: rgb(255 0 112 / 0.5);
+  --btn-link-status-color: rgb(255 0 112 / 0.5);
   background-color: #000028;
   background-attachment: fixed;
 }
@@ -36,7 +36,7 @@
     --title-text-color: #000028;
     --heading-color: var(--accent-color);
     --main-text-color: #f1b2ce;
-    --btn-status-color: rgb(255 0 112 / 0.5);
+    --btn-link-status-color: rgb(255 0 112 / 0.5);
   }
 
   .page {
