--- a/styles/style.css
+++ b/styles/style.css
@@ -4,8 +4,6 @@
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
   background-size: cover;
   background-repeat: no-repeat;
-  block-size: 100vh;
-  min-block-size: 668px;
   background-position: center;
   background-color: #ffeef6;
   background-attachment: fixed;
@@ -17,6 +15,7 @@
   display: grid;
   grid-template-rows: 1fr min-content 1fr;
   block-size: 100vh;
+  min-block-size: 668px;
 }
 
 .header__theme-menu {
@@ -52,16 +51,16 @@
 }
 
 .header__theme-menu-button:hover {
-  outline: 1px solid var(--btn-status-color);
+  outline: 1px solid var(--btn-link-status-color);
 }
 
 .header__theme-menu-button:focus {
   outline: none;
-  border-bottom: 1px solid var(--btn-status-color);
+  border-bottom: 1px solid var(--btn-link-status-color);
 }
 
 .header__theme-menu-button:focus-visible {
-  outline: 1px solid var(--btn-status-color);
+  outline: 1px solid var(--btn-link-status-color);
 }
 
 .header__theme-menu-button_active {
@@ -193,21 +192,21 @@
   margin-block-end: 10px;
 }
 
-.card_block:last-of-type .paragraph {
+.card_block .paragraph:last-of-type {
   margin-block-end: 0px;
 }
 
 .content_top-container .card_block:first-of-type {
-  margin-block-end: 10px;
+  margin-block-end: 20px;
 }
 
 .card_link {
   text-decoration: none;
-  text-shadow: 2px 1px 0 var(--text-decor);
+  text-shadow: 2px 1px 0 var(--text-color);
 }
 
 .card_link:hover {
-  border-bottom: 1px solid var(--text-color);
+  border-bottom: 1px solid var(--btn-link-status-color);
 }
 
 .card_link:focus {
@@ -215,7 +214,7 @@
 }
 
 .card_link:focus-visible {
-  outline: 1px solid var(--text-color);
+  outline: 1px solid var(--btn-link-status-color);
 }
 
 /* --------------- SECTION MIDDLE ---------------  */
@@ -290,7 +289,7 @@
 }
 
 .content_bottom-container .card_block:not(:last-of-type) {
-  margin-block-end: 10px;
+  margin-block-end: 20px;
 }
 
 .content_bottom-container .card_title:not(:nth-child(2)) {
@@ -616,7 +615,7 @@
   }
 
   .footer {
-    max-block-size: 668px;
+    min-block-size: 668px;
   }
 }
 
@@ -664,7 +663,7 @@
   }
 
   .content_top-container .card_block:first-of-type {
-    margin-block-end: 10px;
+    margin-block-end: 20px;
   }
 
   .content_middle-container {
@@ -696,7 +695,7 @@
   }
 
   .footer {
-    height: 1024px;
+    min-block-size: 1024px;
   }
 }
 
