--- a/styles/style.css
+++ b/styles/style.css
@@ -51,16 +51,16 @@
 }
 
 .header__theme-menu-button:hover {
-  outline: 1px solid var(--btn-link-status-color);
+  outline: 1px solid var(--btn-hover-color);
 }
 
 .header__theme-menu-button:focus {
   outline: none;
-  border-bottom: 1px solid var(--btn-link-status-color);
+  border-bottom: 1px solid var(--btn-focus-color);
 }
 
 .header__theme-menu-button:focus-visible {
-  outline: 1px solid var(--btn-link-status-color);
+  outline: 1px solid var(--btn-focus-color);
 }
 
 .header__theme-menu-button_active {
@@ -162,8 +162,9 @@
 
 .content_top-container {
   display: grid;
-  grid-template-columns: [title] calc(34%) [card] calc(66%);
+  grid-template-columns: [title] calc(34%) [card] calc(66.5%);
   grid-auto-flow: row;
+  row-gap: 20px;
 }
 
 .heading {
@@ -177,11 +178,16 @@
   grid-column: card;
 }
 
+.card_block {
+  display: grid;
+  align-items: start;
+  row-gap: 10px;
+}
+
 .card_title {
   font-size: 18px;
   font-weight: 700;
   color: var(--title-text-color);
-  margin-block-end: 10px;
 }
 
 .paragraph {
@@ -189,24 +195,15 @@
   color: var(--main-text-color);
   overflow-wrap: break-word;
   line-height: 23.4px;
-  margin-block-end: 10px;
-}
-
-.card_block .paragraph:last-of-type {
-  margin-block-end: 0px;
-}
-
-.content_top-container .card_block:first-of-type {
-  margin-block-end: 20px;
 }
 
 .card_link {
   text-decoration: none;
-  text-shadow: 2px 1px 0 var(--text-color);
+  text-shadow: 2px 1px 0 var(--text-decor);
 }
 
 .card_link:hover {
-  border-bottom: 1px solid var(--btn-link-status-color);
+  border-bottom: 1px solid var(--link-status-color);
 }
 
 .card_link:focus {
@@ -214,7 +211,7 @@
 }
 
 .card_link:focus-visible {
-  outline: 1px solid var(--btn-link-status-color);
+  outline: 1px solid var(--link-status-color);
 }
 
 /* --------------- SECTION MIDDLE ---------------  */
@@ -231,9 +228,11 @@
 
 .content_middle-container {
   display: grid;
+  align-items: start;
   grid-template-columns: repeat(3, minmax(min-content, 1fr));
   grid-template-rows: auto auto;
   column-gap: 20px;
+  row-gap: 20px;
 }
 
 .content_middle-heading {
@@ -245,11 +244,6 @@
   grid-column-start: 1;
   grid-column-end: 4;
   max-width: 315px;
-  margin-block-end: 20px;
-}
-
-.content_middle-container .card_block:not(:last-of-type) {
-  margin-block-end: 20px;
 }
 
 /* --------------- SECTION BOTTOM ---------------  */
@@ -269,6 +263,7 @@
   display: grid;
   grid-template-columns: [title] calc(34%) [card] calc(66%);
   grid-auto-flow: row;
+  row-gap: 20px;
 }
 
 .content_bottom-heading {
@@ -282,14 +277,6 @@
 
 .content_bottom-container .card_block {
   grid-column: card;
-}
-
-.content_bottom-container .card_title:nth-child(2) {
-  margin-block-end: 20px;
-}
-
-.content_bottom-container .card_block:not(:last-of-type) {
-  margin-block-end: 20px;
 }
 
 .content_bottom-container .card_title:not(:nth-child(2)) {
@@ -442,12 +429,8 @@
     margin-block-end: 20px;
   }
 
-  .content_top-container .card_block:first-of-type {
-    margin-block-end: 21px;
-  }
-
-  .content_middle-container {
-    display: block;
+  .content_top-container .card_block {
+    margin-block-end: 20px;
   }
 
   .content_middle {
@@ -455,7 +438,15 @@
     margin-block-end: 50px;
   }
 
-  .content_middle-container .card_block .paragraph {
+  .content_middle-container {
+    display: block;
+  }
+
+  .content_middle-heading {
+    margin-block-end: 20px;
+  }
+
+  .content_middle-container .card_block {
     margin-block-end: 20px;
   }
 
@@ -472,18 +463,19 @@
     margin-block-end: 20px;
   }
 
-  .content_bottom-container .card_title:nth-child(2) {
-    margin-block-end: 18px;
+  .content_bottom-container .card_block {
+    margin-block-end: 20px;
   }
 
-  .content_bottom-container .card_block:not(:last-of-type) {
-    margin-block-end: 20px;
+  .content_bottom-container .card_title:nth-child(2) {
+    margin-block-end: 19px;
   }
 
   .content_gallery {
     margin-inline: 10px;
     margin-block-end: 31px;
   }
+
   .content_gallery-container {
     display: block;
   }
@@ -567,12 +559,8 @@
     margin-block-end: 20px;
   }
 
-  .content_top-container .card_block:first-of-type {
-    margin-block-end: 22px;
-  }
-
-  .content_middle-container {
-    display: block;
+  .content_top-container .card_block {
+    margin-block-end: 20px;
   }
 
   .content_middle {
@@ -580,7 +568,15 @@
     margin-block-end: 50px;
   }
 
-  .content_middle-container .card_block .paragraph {
+  .content_middle-container {
+    display: block;
+  }
+
+  .content_middle-heading {
+    margin-block-end: 20px;
+  }
+
+  .content_middle-container .card_block {
     margin-block-end: 20px;
   }
 
@@ -595,6 +591,14 @@
 
   .content_bottom-heading {
     margin-block-end: 20px;
+  }
+
+  .content_bottom-container .card_block {
+    margin-block-end: 20px;
+  }
+
+  .content_bottom-container .card_title:nth-child(2) {
+    margin-block-end: 19px;
   }
 
   .content_gallery {
@@ -662,16 +666,17 @@
     grid-auto-flow: row;
   }
 
-  .content_top-container .card_block:first-of-type {
-    margin-block-end: 20px;
-  }
-
   .content_middle-container {
     display: block;
   }
 
   .content_middle-heading {
     margin-inline-end: 70%;
+    margin-block-end: 20px;
+  }
+
+  .content_middle-container .card_block {
+    margin-block-end: 20px;
   }
 
   .content_bottom-container {
