--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,10 +1,16 @@
-/*
-  Переменные для вашего проекта
-  и их переопределение под различные устройства
-*/
-/* Файл variables.css */
 :root {
-  --fonts: "IBM Plex Mono";
+  --fonts: "Inter";
+  --accent-fonts: "PressStart2P";
+  --font-wdth: 100; 
+  --font-wght: 400; 
+  
+  --bg-color: #fde894;
+  --accent-color: #ff0070;
+
+  
+
+/*------------------------------------*/
+
   --bg-image-dark: url(../images/cover-image-dark.png);
   --bg-image-light: url(../images/cover-image-light.png);
   --accent-color: #ff0070;
@@ -12,3 +18,5 @@
   --title-color: #ffc2e6;
   --text-decor: #ff8dcb;
 }
+
+
