--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-
+/* Глобальные стили для проекта, их можно дополнять и менять по желанию */
 
 *,
 *::before,
@@ -7,7 +7,8 @@
 }
 
 body {
-  
+  min-inline-size: 375px;
+  max-inline-size: 1440px;
   margin: 0 auto;
   
 }
